Basic functions and classes #3583
- NOT buildable
